[package]
name = "zbus-teardown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
paste = "1.0.12"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.8"
zbus = { version = "3.13.1", default-features = false, features = ["tokio"] }